# DatingMarket

./: .gitignore  IDEAS.md  README.md  example.ipynb  main.py  pyproject.toml  report.py
dating_market/: __init__.py  market.py  participants.py  user.py  utils.py
dating_market/app/: main.py
src/: main.py  market.py  user.py
src/app/: main.py
