[project]
name = "datingappsimulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "marimo>=0.13.14",
    "numpy>=2.0.2",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "ruff>=0.9.9",
    "seaborn>=0.13.2",
    "streamlit>=1.43.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"

[[tool.uv.index]]
url = "https://artifactory.artelys.com/artifactory/api/pypi/pypi-artelys/simple"
default = true


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages.find.include = ['dating_market*']


[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
]
